  so any future version will probably be defined as only major.minor but evantually
  as major.minor_rev if a package revision is necessary. This policy could be revised
  after any major upgrade.

inventory:
* Fix #771: added Acer monitor serial support for models (G227HQL, G236HL, R221Q, S273HL)
* Fix #787: fix debian package reporting when size is not defined

netdiscovery/netinventory:
* Updated Ricoh printers support
* Updated Zebra printers support

injector:
* Fix an issue with --xml-ua option triggering a perl fatal error on empty or wrong XML files

2.5.2 Mon, 16 Dec 2019

core:
* fix HTTP server IPv6 support as HTTP::Daemon module now supports IPv6 natively
* Always compile IPv4 address as IPv6 too for trusted ips. This is needed when
  system default is to listen other IPv6 or you set httpd-ip to IPv6 address
  like '::' or '::1'.
* win32: always detach agent thread after 10 seconds when stopping the agent
  service when it is blocking on anything to guaranty the service stops in 10s max
* check agent persistent datas for a "forcerun" set flag. This is firstly intended
  to be used by win32 installer to handle the "start inventory after installation"
  option directly from the service.
  This can also be used to change or reset the agent deviceid.
* Add --set-forcerun option support to fusioninventory-agent script
* Add J-C-P contribution to simplify agent installation under linux debian/ubuntu
* fix: don't reschedule too early on a forced run at start
* fix: Don't use delaytime on config reload
* fix: use target counters reset to better support config reload
* feature: limit next run delay reduction
  Limit next run random delay reduction to max 1/6 of the delay if less than 6 hours,
  limit to max an hour for delay from 6 hours to 24 hours,
  and limit to max 1/24 of the delay for delay greater than a day.
  This would keep enough delay randomization to avoid mass agent server connection and
  keep next seen run more coherent with the requested delay.